@@ -2301,6 +2301,7 @@
 12) kernel: net: tcp: increase sysctl_tcp_challenge_ack_limit to 1000 (CVE-2016-5696).<br>
 13) kernel: net: netfilter: avoid race with exp->master ct.<br>
 14) kernel: ralink_wifi: mt76x2/mt76x3: fix and refactor force announse critical ampdu.<br>
+15) kernel: ralink_wifi: mt76x2/mt76x3: fix wrong parse ICMP type in data queue reserve.<br>
 <br>
 <br>
 <br>
